Initial commit: uploaded SIGMA Web Dev course files

--- a/VIDEO 61/index.html
+++ b/VIDEO 61/index.html
@@ -6,7 +6,7 @@
     <title>Exercise 9 Solution - KernalPrab</title>
 </head>
 <body>
-    <h1>Welcome to Faulty Calculator</h1>
+    <h1>This is Faulty Calculator</h1>
     <script src="script.js"></script>
 </body>
 </html>
